    
 CREATE TABLE turq_settings( database_version varchar(50) NOT NULL);
 insert into turq_settings values('0.7.0');
 
 ALTER TABLE turq_users ADD CONSTRAINT u_name UNIQUE (username);

CREATE TABLE turq_user_permission_levels(  id int4 NOT NULL,
  permission_level int4 NOT NULL,  permission_name varchar(50) NOT NULL,
  permission_description varchar(50) NOT NULL,  CONSTRAINT p_level_id PRIMARY KEY (id));

 insert into turq_user_permission_levels values(0,0,'No Access','Hicbiri');
 insert into turq_user_permission_levels values(1,1,'Read','Okuma');
 insert into turq_user_permission_levels values(2,2,'Read/Write','Okuma/Yazma');
 insert into turq_user_permission_levels values(3,3,'Read/Write/Delete','Okuma/Yazma/Silme');

ALTER TABLE turq_user_permissions ADD CONSTRAINT f_level FOREIGN KEY 
(user_permissions_level) REFERENCES turq_user_permission_levels (id)    ON UPDATE RESTRICT ON DELETE RESTRICT;

**********************************************************************************

****************************06-04-2005*******************************
DROP TABLE TURQ_SETTINGS;
CREATE TABLE TURQ_SETTINGS(ID INTEGER NOT NULL PRIMARY KEY,DATABASE_VERSION VARCHAR(50) NOT NULL);
insert into turq_settings values(0,'0.7.0');
***********************************************


!!!!!!!!!!!!!!!!!!!0.7.0 Beta 1 yayinlandi...

INSERT INTO TURQ_CURRENT_TRANSACTION_TYPES VALUES((8,'Virman','admin','2004-10-18','admin','2004-10-18');
INSERT INTO turq_module_components VALUES (92, 4, 'com.turquaz.current.ui.CurUICurrentTransfer', 'Cari Virman', 'cem', '2005-02-28', 'cem', '2005-02-28');

!!!!!!!!!!!!!!!!!!!0.7.0 Beta 2 yayinlandi...
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!11

INSERT INTO turq_cash_transaction_types VALUES (6, 'Acilis', 'admin', '2004-12-12', 'admin', '2004-12-12');
INSERT INTO turq_module_components VALUES (93, 8, 'com.turquaz.cash.ui.CashUIInitialTransactions', 'Kasa Acilis', 'cem', '2005-02-28', 'cem', '2005-02-28');
