@@ -49,7 +49,9 @@ public class AccBLTransactionSearch
 			Boolean isCollect = (Boolean)argMap.get(AccKeys.ACC_IS_COLLECT);
 			Boolean isPayment = (Boolean)argMap.get(AccKeys.ACC_IS_PAYMENT);
 					
-			return AccDALTransactionSearch.searchTransaction(docNo, startDate, endDate, isGeneralTrans.booleanValue(), isCollect.booleanValue(), isPayment.booleanValue());
+			List ls = AccDALTransactionSearch.searchTransaction(docNo, startDate, endDate, isGeneralTrans.booleanValue(), isCollect.booleanValue(), isPayment.booleanValue());
+		    System.out.println(ls.size());
+			return ls;
 		}
 		catch (Exception ex)
 		{
