@@ -142,6 +142,7 @@ TreeFactory.117=Stok \u00C7\u0131k\u0131\u015F Hareketi
 TreeFactory.118=A\u00E7\u0131l\u0131\u015F Hareketi
 TreeFactory.119=Cari Alacak Fi\u015Fi
 TreeFactory.12=Mahsup Fi\u015Fi Ekle
+TreeFactory.120=Sat\u0131\u015F \u0130rsaliyesi
 TreeFactory.13=Tahsil Fi\u015Fi Ekle
 TreeFactory.14=Tediye Fi\u015Fi Ekle
 TreeFactory.15=Muhasebe Fi\u015Fi Arama
@@ -166,6 +167,7 @@ TreeFactory.28=Yevmiye Defteri
 TreeFactory.29=Mizan
 TreeFactory.31=\u0130rsaliye
 TreeFactory.30=Yeni \u0130rsaliye Giri\u015Fi
+TreeFactory.30=Al\u0131\u015F \u0130rsaliyesi
 TreeFactory.33=Defter-i Kebir
 TreeFactory.34=\u0130rsaliye Arama
 TreeFactory.35=Stok Hareketi Arama
